# suno-to-ableton

./: .gitignore  .readmeaiignore  404.html  AGENTS.md  README.md  USAGE.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
als-export/: index.html
cli-flags/: index.html
contributing/: index.html
docs/: als-export.md  cli-flags.md  contributing.md  grid-anchor.md  harmonic-midi-repair.md  index.md  install.md  reports.md  suno-export.md  usage-cli.md  usage-tui.md  workflows.md
docs/features/: grid-anchor.md  harmonic-midi-repair.md  index.md  requantization.md  section-detection.md  separation-strategy.md  stem-quality-judgment.md
docs/stylesheets/: extra.css
features/: index.html
install/: index.html
overrides/: main.html
reports/: index.html
search/: search_index.json
stylesheets/: extra.css
suno-export/: index.html
suno_ableton_preprocessor/: audio_processing.py  bpm_detection.py  cli.py  config.py  discovery.py  midi_cleanup.py  models.py  pipeline.py  reporting.py  tui.py
suno_to_ableton/: __init__.py  alignment.py  audio_processing.py  cli.py  config.py  discovery.py  midi_cleanup.py  models.py  pipeline.py  progress.py  separation.py  tui.py
templates/: Ableton 11 Template.als  Ableton 12 Template.als  Ableton 12.als
tests/: test_alignment.py  test_audio_processing.py  test_cli.py  test_config.py  test_discovery.py  test_export_als.py  test_midi_cleanup.py  test_models.py  test_progress.py  test_tui_integration.py
usage-cli/: index.html
usage-tui/: index.html
workflows/: index.html
(+15 files in other folders)
